--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
   },
   "private": true,
   "devDependencies": {
+    "@nrwl/devkit": "15.8.5",
     "@nrwl/eslint-plugin-nx": "15.8.5",
-    "@nrwl/js": "^15.8.5",
+    "@nrwl/js": "15.8.5",
     "@nrwl/linter": "15.8.5",
     "@nrwl/vite": "15.8.5",
-    "@types/node": "^18.14.6",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitest/coverage-c8": "~0.25.8",
-    "@vitest/ui": "^0.25.8",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jsdom": "~20.0.3",
-    "nx": "^15.8.5",
-    "prettier": "^2.8.4",
-    "typescript": "~4.9.5",
-    "vite": "^4.0.1",
-    "vite-plugin-dts": "~1.7.1",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.25.8"
+    "@types/node": "18.14.6",
+    "@typescript-eslint/eslint-plugin": "5.54.0",
+    "@typescript-eslint/parser": "5.54.0",
+    "@vitest/coverage-c8": "0.29.2",
+    "@vitest/ui": "0.29.2",
+    "eslint": "8.35.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "jsdom": "21.1.0",
+    "nx": "15.8.5",
+    "prettier": "2.8.4",
+    "typescript": "4.9.5",
+    "vite": "4.1.4",
+    "vite-plugin-dts": "2.0.2",
+    "vite-plugin-eslint": "1.8.1",
+    "vite-tsconfig-paths": "4.0.5",
+    "vitest": "0.29.2"
   }
 }
