--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "5.54.0",
     "@vitest/coverage-c8": "0.29.2",
     "@vitest/ui": "0.29.2",
+    "chalk": "5.2.0",
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
