--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vite": "4.1.4",
     "vite-plugin-dts": "2.0.2",
     "vite-plugin-eslint": "1.8.1",
+    "vite-plugin-static-copy": "0.13.1",
     "vite-tsconfig-paths": "4.0.5",
     "vitest": "0.29.2"
   }
