--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "@nrwl/js": "15.8.5",
     "@nrwl/linter": "15.8.5",
     "@nrwl/vite": "15.8.5",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/node": "18.14.6",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/testing-library__jest-dom": "5.14.5",
     "@typescript-eslint/eslint-plugin": "5.54.0",
     "@typescript-eslint/parser": "5.54.0",
     "@vitest/coverage-c8": "0.29.2",
@@ -26,6 +32,8 @@
     "jsdom": "21.1.0",
     "nx": "15.8.5",
     "prettier": "2.8.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typescript": "4.9.5",
     "vite": "4.1.4",
     "vite-plugin-dts": "2.0.2",
